--- a/intro.html
+++ b/intro.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Selamat Datang</title>
+    <title>Game Kado Ulang Tahun</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;800&family=Poppins:wght@300;400;600&display=swap');
 
         * {
             margin: 0;
@@ -15,80 +15,88 @@
 
         body {
             font-family: 'Poppins', sans-serif;
-            background: radial-gradient(circle at center, #0A192F, #010409);
+            background: url('bck.png') no-repeat center center/cover;
             color: white;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             text-align: center;
-            position: relative;
             overflow: hidden;
+            position: relative;
+            opacity: 0;
+            animation: fadeInPage 1.5s ease-in-out forwards;
+        }
+
+        body::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: -1;
         }
 
         .container {
-            position: relative;
-            z-index: 2;
-        }
-
-        .avatar {
-            width: 180px;
-            height: 180px;
-            background: url('avatar-couple.png') no-repeat center center/cover;
-            border-radius: 50%;
-            box-shadow: 0 0 15px cyan, 0 0 30px cyan;
-            display: inline-block;
-            animation: neonGlow 2s infinite alternate;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 25px;
+            border-radius: 15px;
+            box-shadow: 0px 10px 40px rgba(74, 144, 226, 0.8); /* Efek glow biru */
+            animation: fadeIn 1.5s ease-in-out, floating 3s infinite ease-in-out;
         }
 
         h1 {
-            font-size: 2.5em;
-            font-weight: 600;
-            text-shadow: 0px 0px 15px cyan;
-            margin-top: 15px;
-            animation: fadeIn 2s ease-in-out;
+            font-family: 'Playfair Display', serif;
+            font-size: 2em;
+            font-weight: 800;
+            margin-bottom: 20px;
+            text-shadow: 0px 0px 15px rgba(74, 144, 226, 0.9); /* Cahaya biru */
+            animation: slideIn 1s ease-in-out;
         }
 
-        .line {
-            width: 120px;
-            height: 4px;
-            background: cyan;
-            margin: 10px auto;
-            border-radius: 2px;
-            animation: expandLine 1.5s infinite alternate;
+        h1 span {
+            color: #4a90e2; /* Warna biru favorit */
+            text-shadow: 0px 0px 20px rgba(74, 144, 226, 0.9); /* Glow neon biru */
+            transition: 0.3s;
         }
 
-        p {
-            font-size: 1.3em;
-            opacity: 0;
-            animation: fadeText 3s 1.5s forwards;
+        h1 span:hover {
+            color: #00d9ff; /* Biru lebih terang saat hover */
+            text-shadow: 0px 0px 25px rgba(0, 217, 255, 1); 
         }
 
         .btn {
             display: inline-block;
-            margin: 15px;
+            margin: 10px;
             padding: 12px 35px;
             font-size: 1em;
             font-weight: 600;
+            font-family: 'Poppins', sans-serif;
             color: white;
-            background: linear-gradient(45deg, #00ffff, #0088ff);
+            background: linear-gradient(45deg, #007bff, #00d9ff); /* Warna tombol biru neon */
             border: none;
             border-radius: 50px;
             cursor: pointer;
             transition: 0.3s;
-            box-shadow: 0px 5px 15px rgba(0, 255, 255, 0.3);
+            box-shadow: 0px 5px 15px rgba(0, 217, 255, 0.6);
         }
 
         .btn:hover {
-            background: linear-gradient(45deg, #0088ff, #00ffff);
+            background: linear-gradient(45deg, #0056b3, #00aaff);
             transform: translateY(-3px);
-            box-shadow: 0px 10px 20px rgba(0, 255, 255, 0.6);
+            box-shadow: 0px 10px 20px rgba(0, 170, 255, 0.8);
         }
 
-        @keyframes neonGlow {
-            0% { box-shadow: 0 0 15px cyan, 0 0 30px cyan; }
-            50% { box-shadow: 0 0 20px cyan, 0 0 40px cyan; }
-            100% { box-shadow: 0 0 15px cyan, 0 0 30px cyan; }
+        .btn:active {
+            transform: scale(0.95);
+            box-shadow: 0px 5px 20px rgba(0, 170, 255, 1);
+        }
+
+        @keyframes fadeInPage {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
 
         @keyframes fadeIn {
@@ -96,29 +104,35 @@
             to { opacity: 1; transform: translateY(0); }
         }
 
-        @keyframes expandLine {
-            from { width: 80px; }
-            to { width: 140px; }
+        @keyframes slideIn {
+            from { opacity: 0; transform: translateY(-30px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
-        @keyframes fadeText {
-            from { opacity: 0; }
-            to { opacity: 1; }
+        @keyframes floating {
+            0% { transform: translateY(0px); }
+            50% { transform: translateY(-10px); }
+            100% { transform: translateY(0px); }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="avatar"></div>
-        <h1>Selamat Datang</h1>
-        <div class="line"></div>
-        <p>Sebuah kejutan menantimu...</p>
-        <button class="btn" onclick="nextPage()">Lanjut</button>
-    </div>
+    <audio autoplay loop>
+        <source src="musik.mp3" type="audio/mpeg">
+    </audio>
 
+    <div class="container">
+        <h1>Apakah namamu <span>Neila Putri Nur Aini</span>? 🤔</h1>
+        <button class="btn" onclick="nextPage('question.html')">Iya</button>
+        <button class="btn" onclick="nextPage('wrong.html')">Tidak</button>
+    </div>
+    
     <script>
-        function nextPage() {
-            window.location.href = "index.html";
+        function nextPage(page) {
+            document.body.style.opacity = "0"; // Efek fade out sebelum pindah halaman
+            setTimeout(() => {
+                window.location.href = page;
+            }, 500);
         }
     </script>
 </body>
